[package]
name = "rust-wokrers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
hmac = "0.12.1"
js-sys = "0.3.82"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.9"
url = "2.5.7"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
worker = { version = "0.8.1", features = ["d1"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
